style/blocks/_media-and-text.scss
.wp-block-media-text {
	align-items: start;
	clear: both;
	padding-top: 20px;
	padding-top: 50px;
	padding-bottom: 50px;

	h1, h2 {
		margin-top: 0;
	}

	.wp-block-media-text__content {
		padding: 0;

		&:after {
			@include clearfix();
			@include clearfix-after();
		}
	}

	@media screen and (min-width: 600px) {
		display: flex;

		.wp-block-media-text__media,
		.wp-block-media-text__content {
			flex-basis: 50%;
		}

		&.has-media-on-the-right {

			.wp-block-media-text__content {
				order: 0;
			}

			.wp-block-media-text__media {
				order: 1;
			}
		}
	}

	@media screen and (max-width: breakpoint('tablet-portrait')) {

		&.is-stacked-on-mobile {
			display: block;
			padding-bottom: 30px;

			.wp-block-media-text__content {

				h1, h2 {
					margin-top: 20px;
					margin-bottom: 15px;
				}
			}
		}
	}

	@media screen and (min-width: breakpoint('tablet-portrait')) {

		.wp-block-media-text__content {
			padding-left: 8%;
		}

		&.has-media-on-the-right .wp-block-media-text__content {
			padding-right: 8%;
			padding-left: 0;
		}
	}

	@media screen and (min-width: breakpoint('tablet-landscape')) {
		padding-top: 70px;
		padding-bottom: 70px;
	}
}

.wp-block-media-text {

	&.has-image-background {
		padding-top: 50px;
		padding-bottom: 50px;
		display: block;
		position: relative;
		padding-left: $padding__content-mobile;
		padding-right: $padding__content-mobile;

		.wp-block-media-text__media,
		.wp-block-media-text__content {
			display: block;
		}

		.wp-block-media-text__content {
			position: relative;
			z-index: 1;
			padding: 0;
		}

		@media screen and (min-width: 600px) {

			.wp-block-media-text__media {
				position: absolute;
				top: 0;
				bottom: 0;
				left: 0;
				right: 0;

				img {
					height: 100%;
					width: 100%;
					object-fit: cover;
				}
			}

			.wp-block-media-text__content {
				background: #fff;
				border-radius: 8px;
				box-shadow: 0 0 3px rgba(0,0,0,.2);
				width: 50%;
				padding: 20px;
			}

			&.is-style-full {

				.wp-block-media-text__content {
					background: none;
					border-radius: 0;
					box-shadow: none;
					width: 100%;
				}
			}
		}
	}
}

